<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SplashScreen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/widget_color"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo_top" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/gochihandregular"
            android:text="@string/app_name"
            android:textColor="@color/background"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/widget_color"
            android:drawableLeft="@drawable/ic_checked_success_svgrepo_com"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/splash_instructions_tag_1"
            android:textColor="@color/top_text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/widget_color"
            android:drawableLeft="@drawable/ic_checked_success_svgrepo_com"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/splash_instructions_tag_2"
            android:textColor="@color/top_text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/widget_color"
            android:drawableLeft="@drawable/ic_checked_success_svgrepo_com"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/splash_instructions_tag_3"
            android:textColor="@color/top_text_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/buttons_background"
            android:text="Login"
            android:textColor="@color/top_text_color" />

        <TextView
            android:id="@+id/textViewGuestLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/bitterregularitalic"
            android:gravity="center"
            android:text="Login as a guest"
            android:textColor="@color/hading_color"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>